[metadata]
name = SLISE
version = 1.1.1
author = Anton Björklund
author_email = anton.bjorklund@helsinki.fi
description = The SLISE algorithm for robust regression and explanations of black box models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edahelsini/pyslise
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
license = MIT
license_files = LICENSE
keywords =
    Robust regression
    Sparse Linear Regression
    Explainable Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.20
    scipy >= 1.6
    numba >= 0.53
    matplotlib >= 3.3
    PyLBFGS >= 0.2

[options.packages.find]
exclude =
    examples
    tests
